<resources>
    <string name="app_name">PasswdBuddy</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_list">Codes</string>
    <string name="search_hint">Type to search...</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_credential">Credential Details</string>
    <string name="label_login">Login</string>
    <string name="prompt_enter_your_login_username">Enter your login/username ...</string>
    <string name="label_password">Password</string>
    <string name="prompt_enter_password_here">Enter your description of \n password here...</string>
    <string name="btn_save">SAVE</string>
    <string name="btn_delete">DELETE</string>
</resources>
