<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="3"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.satt294.passwdbuddy.activities.CredentialActivity"
    tools:showIn="@layout/activity_credential">


    <TextView
        android:layout_column="0"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_row="0"
        android:text="@string/label_login"
        android:layout_gravity="top"/>

    <EditText
        android:id="@+id/et_Cred_Login"
        android:layout_column="1"
        android:layout_row="0"
        android:hint="@string/prompt_enter_your_login_username" />

    <TextView
        android:layout_column="0"
        android:layout_gravity="top"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_row="1"
        android:text="@string/label_password" />

    <EditText
        android:id="@+id/et_Cred_Description"
        android:layout_column="1"
        android:layout_row="1"
        android:height="200dp"
        android:hint="@string/prompt_enter_password_here"
        android:gravity="top"/>

    <Button
        android:id="@+id/btn_UpdateCredential"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:layout_row="2"
        android:text="@string/btn_save"
        android:onClick="axnSaveCredentials"/>

    <Button
        android:id="@+id/btn_DeleteCredential"
        android:layout_column="1"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:layout_row="2"
        android:text="@string/btn_delete" />


</GridLayout>
